fix: #WB2-1556, truncate text 2 lines

--- a/public/assets/themes/edifice-bootstrap/index.css
+++ b/public/assets/themes/edifice-bootstrap/index.css
@@ -18058,7 +18058,7 @@ hr {
     background-color: rgba(0, 0, 0, 0)
 }
 
-.btn.btn-ghost-primary {
+.btn.btn-ghost-primary:not(.btn-icon) {
     height: 40px
 }
 
@@ -18067,7 +18067,7 @@ hr {
     outline-offset: -1px
 }
 
-.btn.btn-ghost-secondary {
+.btn.btn-ghost-secondary:not(.btn-icon) {
     height: 40px
 }
 
@@ -18076,7 +18076,7 @@ hr {
     outline-offset: -1px
 }
 
-.btn.btn-ghost-tertiary {
+.btn.btn-ghost-tertiary:not(.btn-icon) {
     height: 40px
 }
 
@@ -18085,7 +18085,7 @@ hr {
     outline-offset: -1px
 }
 
-.btn.btn-ghost-danger {
+.btn.btn-ghost-danger:not(.btn-icon) {
     height: 40px
 }
 
